--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
     <link rel="stylesheet" href="template/templates/dashboard/styles.css">
     <link rel="stylesheet" href="./css/graph.css">
     <link rel="stylesheet" href="./css/style.css">
+    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
+
+    <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+    <!--<link rel="stylesheet" href="./materialsidebar/css/normalize.css">-->
+    <link rel="stylesheet" href="./materialsidebar/css/style.css">
+
 </head>
 <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
@@ -87,6 +94,27 @@
                     </ul>
                 </div>
             </header>
+
+            <aside id="sidebar" class="sidebar sidebar-default open" role="navigation" style="width:100%; height:0">
+                <!-- Sidebar navigation -->
+                <ul class="nav sidebar-nav">
+                    <li class="dropdown">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">All Mail<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">All Mail<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </aside>
+
             <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
                 <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
                 <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Inbox</a>
@@ -112,7 +140,7 @@
 
     <script src="template/material.min.js"></script>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.21.min.js"></script>
-    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.3.min.js"></script>
+    <script src="./materialsidebar/js/index.js"></script>
     <script>
         var headerheight = $("#header").height();
         var windowheight = $(window).height();
