added all subjects to sidebar

--- a/index.html
+++ b/index.html
@@ -95,18 +95,130 @@
                 </div>
             </header>
 
-            <aside id="sidebar" class="sidebar sidebar-default open" role="navigation" style="width:100%; height:0">
+            <aside id="sidebar" class="sidebar sidebar-default open" role="navigation" style="width:100%">
                 <!-- Sidebar navigation -->
                 <ul class="nav sidebar-nav">
-                    <li class="dropdown">
-                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">All Mail<b class="caret" style></b></a>
+                    <li class="dropdown" style="background-color:#1f77b4" onclick="filtersubject('1')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Civil and Environmental Engineering<b class="caret" style></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
                             <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
                         </ul>
                     </li>
-                    <li class="dropdown">
-                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">All Mail<b class="caret"></b></a>
+                    <li class="dropdown" style="background-color:#aec7e8" onclick="filtersubject('2')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Mechanical Engineeringl<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#ff7f0e" onclick="filtersubject('3')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Materials Science and Engineering<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#ffbb78" onclick="filtersubject('4')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Architecture<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#2ca02c" onclick="filtersubject('5')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Chemistry<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#98df8a" onclick="filtersubject('6')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Electrical Engineering and Computer Science<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#d62728" onclick="filtersubject('7')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Biology<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#ff9896" onclick="filtersubject('8')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Physics<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#9467bd" onclick="filtersubject('9')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Brain and Cognitive Sciences<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#c5b0d5" onclick="filtersubject('10')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Chemical Engineering<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#8c564b" onclick="filtersubject('11')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Urban Studies and Planning<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#c49c94" onclick="filtersubject('12')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Earth, Atmospheric, and Planetary Sciencesg<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#f7b6d2" onclick="filtersubject('14')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Economics<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#7f7f7f" onclick="filtersubject('15')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Management<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#c7c7c7" onclick="filtersubject('16')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Aeronautics and Astronautics<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#bcbd22" onclick="filtersubject('17')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Political Science<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#dbdb8d" onclick="filtersubject('18')">
+                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Mathematics<b class="caret" style></b></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
+                            <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
+                        </ul>
+                    </li>
+                    <li class="dropdown" style="background-color:#9edae5" onclick="filtersubject('20')">
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">>Biological Engineering<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
                             <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
@@ -115,7 +227,7 @@
                 </ul>
             </aside>
 
-            <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
+            <!-- <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
                 <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
                 <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Inbox</a>
                 <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Trash</a>
@@ -127,7 +239,7 @@
                 <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
                 <div class="mdl-layout-spacer"></div>
                 <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">help_outline</i><span class="visuallyhidden">Help</span></a>
-            </nav>
+            </nav> -->
         </div>
         <main id="graphmdl" class="mdl-layout__content mdl-color--grey-100">
             <div id="graphgrid" class="mdl-grid demo-content " style="max-width:none; padding:0">
@@ -140,19 +252,13 @@
 
     <script src="template/material.min.js"></script>
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.21.min.js"></script>
-    <script src="./materialsidebar/js/index.js"></script>
     <script>
-        var headerheight = $("#header").height();
-        var windowheight = $(window).height();
-        console.log(windowheight);
-        console.log(headerheight);
-        var grandparent_height = $('#graphmdl').height();
-        console.log(grandparent_height);
-        $('#graphsvg').height(windowheight - headerheight - 16);
+        $('#graphsvg').height($(window).height() - $("#header").height() - 16);
     </script>
     <script src="./js/jquery-mobile-just-touch.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript"></script>
     <script src="http://marvl.infotech.monash.edu/webcola/cola.v3.min.js"></script>
     <script src="./js/graph.js"></script>
+    <script src="./materialsidebar/js/index.js"></script>
 </body>
 </html>
