--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         </ul>
                     </li>
                     <li class="dropdown" style="background-color:#aec7e8" onclick="filtersubject('2')">
-                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Mechanical Engineeringl<b class="caret"></b></a>
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Mechanical Engineering<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
                             <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
@@ -171,7 +171,7 @@
                         </ul>
                     </li>
                     <li class="dropdown" style="background-color:#c5b0d5" onclick="filtersubject('10')">
-                        <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Chemical Engineering<b class="caret"></b></a>
+                            <a class="ripple-effect dropdown-toggle" href="#" data-toggle="dropdown">Chemical Engineering<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
                             <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
@@ -185,7 +185,7 @@
                         </ul>
                     </li>
                     <li class="dropdown" style="background-color:#c49c94" onclick="filtersubject('12')">
-                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Earth, Atmospheric, and Planetary Sciencesg<b class="caret"></b></a>
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Earth, Atmospheric, and Planetary Sciences<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
                             <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
@@ -227,7 +227,7 @@
                         </ul>
                     </li>
                     <li class="dropdown" style="background-color:#9edae5" onclick="filtersubject('20')">
-                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">>Biological Engineering<b class="caret"></b></a>
+                        <a class="ripple-effect dr  opdown-toggle" href="#" data-toggle="dropdown">Biological Engineering<b class="caret"></b></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" tabindex="-1">Social<span class="sidebar-badge">12</span></a></li>
                             <li><a href="#" tabindex="-1">Promo<span class="sidebar-badge">0</span></a></li>
