--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <link rel="stylesheet" href="template/templates/dashboard/styles.css">
     <link rel="stylesheet" href="./css/graph.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/sidebar.css">
+    <link rel="stylesheet" href="left-sidebar/sidebar.css">
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
     <meta name="google-signin-client_id" content="927920610795-i77s0glk685haiiba12scdicjbkv4ius.apps.googleusercontent.com">
@@ -240,7 +240,7 @@
         </div>
     </main>
 </div>
-<script src="./js/sidebar.js"> </script>
+<script src="left-sidebar/sidebar.js"> </script>
 <script src="template/material.min.js"></script>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.21.min.js"></script>
 <script>
