--- a/left-sidebar/sidebar.html
+++ b/left-sidebar/sidebar.html
@@ -9,16 +9,16 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" sizes="192x192" href="template/templates/dashboard/images/android-desktop.png">
+    <link rel="icon" sizes="192x192" href="../template/templates/dashboard/images/android-desktop.png">
 
-    <link rel="shortcut icon" href="template/templates/dashboard/images/favicon.png">
+    <link rel="shortcut icon" href="../template/templates/dashboard/images/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="template/material.css">
-    <link rel="stylesheet" href="template/templates/dashboard/styles.css">
-    <link rel="stylesheet" href="./css/graph.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/sidebar.css">
+    <link rel="stylesheet" href="../template/material.css">
+    <link rel="stylesheet" href="../template/templates/dashboard/styles.css">
+    <link rel="stylesheet" href="../css/graph.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="sidebar.css">
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
@@ -151,6 +151,6 @@
             </li>
         </ul>
     </div>
-    <script src="./js/sidebar.js"> </script>
+    <script src="sidebar.js"> </script>
 </body>
 </html>
