--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
     <link rel="stylesheet" href="left-sidebar/sidebar.css">
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="./js/account.js"></script>
     <meta name="google-signin-client_id" content="927920610795-i77s0glk685haiiba12scdicjbkv4ius.apps.googleusercontent.com">
 
 </head>
@@ -79,9 +81,11 @@
     </header>
     <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-            <img src="template/templates/dashboard/images/user.jpg" class="demo-avatar">
+            <img id="profimg" src="template/templates/dashboard/images/user.jpg" class="demo-avatar" style="margin:16px">
             <div class="demo-avatar-dropdown">
-                <span>hello@example.com</span>
+                <!--<span>hello@example.com</span>-->
+                <div id= "signinbtn" class="g-signin2" data-onsuccess="onSignIn"></div>
+                <span id="namefield" style="display:none"></span>
                 <div class="mdl-layout-spacer"></div>
                 <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
                     <i class="material-icons" role="presentation">arrow_drop_down</i>
