sign out button in dropdown

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
                     <span class="visuallyhidden">Accounts</span>
                 </button>
                 <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-                    <li class="mdl-menu__item">hello@example.com</li>
-                    <li class="mdl-menu__item">info@example.com</li>
-                    <li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
+                    <li id="signout" class="mdl-menu__item signout" onclick="signOut()" style="display:none">sign out</li>
+                    <li class="mdl-menu__item">integrate Facebook</li>
+                    <li class="mdl-menu__item">integrate LinkedIn</li>
                 </ul>
             </div>
         </header>
