increased margin around graph

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         </nav>
     </div>
     <main id="graphmdl" class="mdl-layout__content mdl-color--grey-100">
-        <div id="graphgrid" class="mdl-grid demo-content " style="max-width:none; padding:0">
+        <div id="graphgrid" class="mdl-grid demo-content " style="max-width:none; padding:8px">
             <div  id="graphbox" class="demo-charts mdl-color--white mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-grid" style="padding:0">
                 <svg id="graphsvg" fill="currentColor" class="demo-chart"></svg>
             </div>
@@ -251,7 +251,7 @@
 <script src="template/material.min.js"></script>
 <script src="https://sdk.amazonaws.com/js/aws-sdk-2.2.21.min.js"></script>
 <script>
-    $('#graphsvg').height($(window).height() - $("#header").height() - 16);
+    $('#graphsvg').height($(window).height() - $("#header").height() - 32);
 </script>
 <!-- <script src="./js/jquery-mobile-just-touch.js"></script> -->
 <script src="http://d3js.org/d3.v3.min.js" charset="utf-8" type="text/javascript"></script>
